style(hubspot-form.scss): update styling for submit button in HubSpot form to improve alignment and appearance style(style-default.scss): update box-shadow for buttons and form elements to improve visual consistency style(community-page.scss): update styling for community page cards to improve appearance and add hover effect fix(enterprise-page.tsx): add smooth scrolling functionality to "Talk to Sales" button to improve user experience

--- a/src/components/hubspot-form/hubspot-form.scss
+++ b/src/components/hubspot-form/hubspot-form.scss
@@ -70,26 +70,28 @@ capacitor-hubspot-form {
   }
 
   .hs_submit input.hs-button {
-    display: block;
-    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     cursor: pointer;
-    font-size: 13px;
-    padding: 10px 18px 10px;
-    margin-right: -14px;
-    margin-top: -36px;
-    margin-left: auto;
-    margin-right: auto;
-    line-height: 23px;
-    float: right;
-    font-weight: 600;
-    letter-spacing: 0;
-    text-transform: none;
-    text-shadow: none;
-    background: var(--c-ionic-brand);
-    border: 0;
-    outline: 0;
-    transition: all 0.2s linear;
-    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12);
+    height: 48px;
+    border: none;
+    background: var(--c-capacitor-blue);
+    color: #fff;
+    border-radius: var(--radius-2);
+
+    font-family: var(--f-family-text);
+    letter-spacing: -0.02em;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;
+
+    margin-block-start: 0;
+    margin-block-end: 0;
+
+    padding: 15px 18px 16px 18px;
+    transition: box-shadow 0.2s ease-out, background-color 0.2s ease-out;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.43);
 
     &:hover {
       border: 0;
@@ -104,7 +106,8 @@ capacitor-hubspot-form {
     &:focus:not(.inactive) {
       border: 0;
       color: #fff;
-      box-shadow: inset 0 1px 4px rgba(0, 0, 0, 0.2);
+      outline: 1px solid rgba(0, 0, 0, 0);
+      box-shadow: 0px 0px 0px 3px #c2d8ff;
       background: var(--c-capacitor-blue);
       outline: 0;
     }
