--- a/src/pages/community-page/community-page.scss
+++ b/src/pages/community-page/community-page.scss
@@ -43,10 +43,21 @@
 
     .card {
       overflow: hidden;
+      border-radius: var(--radius-2);
+      background-color: var(--c-indigo-0);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.14);
+      transition: background-color 0.14s ease-in-out;
+      p {
+        padding-left: 14px;
+        padding-right: 14px;
+        padding-bottom: 14px;
+      }
 
+      h4 {
+        margin-left: 14px;
+      }
       .image-wrapper {
         overflow: hidden;
-        border-radius: var(--radius-2);
         margin-block-end: 24px;
         max-width: 340px;
 
@@ -59,9 +70,15 @@
       &:hover,
       &:active,
       &:focus {
+        background-color: var(--c-indigo-10);
         img {
           transform: scale(1.24);
         }
+      }
+
+      &:focus {
+        outline: 1px solid rgba(0, 0, 0, 0);
+    box-shadow: 0px 0px 0px 3px #c2d8ff;
       }
     }
   }
